Add legends of valor and monsters and heroes java 8 comapatible